<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/my_cardview_picture"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_picture"
    cardview:cardElevation="@dimen/elevation_Card"
    cardview:cardCornerRadius="@dimen/cardview_cornerRadius"
    android:layout_marginBottom="@dimen/margin_bottom_card"
    android:elevation="@dimen/ele_4dps"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_picture"
            android:background="@drawable/image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/color_background_card">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namecard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsiZe_card_name_user"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timeword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/timeword_card"
                    android:textSize="@dimen/textsiZe_timeword_card"/>
                <TextView
                    android:id="@+id/timeword_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsiZe_timewordcard_card"
                    android:text="@string/timewordcard_card"
                    android:layout_marginLeft="@dimen/margin_timeword_card"/>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/like_margintop">

                <CheckBox
                    android:id="@+id/likecheckbox_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_select"/>

                <TextView
                    android:id="@+id/cantidad_likescard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/likeNumber_card"
                    android:textSize="@dimen/textsiZe_timeword_card"
                    android:layout_marginLeft="@dimen/margin_timeword_card"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>