<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.fredy.platzigram.view.PictureDetalleActivity">

        <!--Asi como debe estar el appbar para uso de collapsingToolbar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/my_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/my_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/my_img_collapsign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/my_usernamedDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameDetalle"
                android:textSize="@dimen/textsize_usernamedetail"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/my_LikeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="@dimen/textsize_likenumberdetail"
                    />

                <TextView
                    android:id="@+id/my_segundonumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeDetalle"
                    android:layout_marginLeft="@dimen/segundonumberdetail"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/diveder_detalle"
                android:background="@android:color/darker_gray"
             />

            <TextView
                android:id="@+id/my_tituloimg_dDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_img_Detalle"
                android:textSize="@dimen/textsize_usernamedetail"
                android:layout_gravity="center_vertical|center"
                android:textStyle="bold"
                android:paddingTop="@dimen/titulo_img_Detalle"
                />

            <TextView
                android:id="@+id/my_contenidoimg_dDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contenido_img_Detalle"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:layout_gravity="center_vertical|center"
                android:paddingTop="@dimen/titulo_img_Detalle"
                android:paddingLeft="@dimen/contenido_img_pading"
                android:paddingRight="@dimen/contenido_img_pading"
                />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/me_gusta_48"
        app:layout_anchor="@+id/my_appbar"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>

